feat(config): migrate to @t3-oss/env-core for type-safe env
- Add @t3-oss/env-core for client/server env separation
- Update to Zod v4 syntax (z.url() instead of z.string().url())
- Add SKIP_ENV_VALIDATION for CI/testing
- Rename APP_URL to VITE_APP_URL for client exposure
- Update auth package to use validated env from @oakoss/config
- Update turbo.json globalEnv with new variables

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,6 @@ GITHUB_CLIENT_SECRET=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
-# Application
-APP_URL="http://localhost:3000"
+# Application (VITE_ prefix exposes to client)
+VITE_APP_URL="http://localhost:3000"
 NODE_ENV="development"
