--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@t3-oss/env-core": "^0.13.10",
     "zod": "^4.3.5"
   },
   "devDependencies": {
