--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,12 +18,14 @@
     "@tanstack/react-start": "^1.154.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
+    "react-aria-components": "^1.14.0",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@oakoss/eslint-config": "workspace:*",
     "@oakoss/typescript-config": "workspace:*",
+    "@react-aria/optimize-locales-plugin": "^1.1.5",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/devtools-vite": "^0.4.1",
     "@tanstack/react-devtools": "^0.9.2",
