feat(ui): align theme with base-ui neutral palette and improve dev workflow
- Update theme.css to use base-ui-vite-app color tokens (neutral primary, warm chart palette)
- Add @fontsource-variable/inter for consistent typography
- Update dev script to watch all src files for better CSS hot-reload

--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -5,5 +5,9 @@
     "rootDir": "src"
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.lint.json" }]
+  "references": [
+    {
+      "path": "./tsconfig.lint.json"
+    }
+  ]
 }
