--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,65 +7,17 @@
   ],
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./accordion": "./src/components/ui/accordion.tsx",
-    "./alert": "./src/components/ui/alert.tsx",
-    "./alert-dialog": "./src/components/ui/alert-dialog.tsx",
-    "./aspect-ratio": "./src/components/ui/aspect-ratio.tsx",
-    "./avatar": "./src/components/ui/avatar.tsx",
-    "./badge": "./src/components/ui/badge.tsx",
-    "./breadcrumb": "./src/components/ui/breadcrumb.tsx",
-    "./button": "./src/components/ui/button.tsx",
-    "./button-group": "./src/components/ui/button-group.tsx",
-    "./calendar": "./src/components/ui/calendar.tsx",
-    "./card": "./src/components/ui/card.tsx",
-    "./carousel": "./src/components/ui/carousel.tsx",
-    "./chart": "./src/components/ui/chart.tsx",
-    "./checkbox": "./src/components/ui/checkbox.tsx",
-    "./checkbox-group": "./src/components/ui/checkbox-group.tsx",
-    "./collapsible": "./src/components/ui/collapsible.tsx",
-    "./command": "./src/components/ui/command.tsx",
-    "./context-menu": "./src/components/ui/context-menu.tsx",
-    "./dialog": "./src/components/ui/dialog.tsx",
-    "./drawer": "./src/components/ui/drawer.tsx",
-    "./dropdown-menu": "./src/components/ui/dropdown-menu.tsx",
-    "./empty": "./src/components/ui/empty.tsx",
-    "./field": "./src/components/ui/field.tsx",
-    "./hover-card": "./src/components/ui/hover-card.tsx",
-    "./input": "./src/components/ui/input.tsx",
-    "./input-group": "./src/components/ui/input-group.tsx",
-    "./input-otp": "./src/components/ui/input-otp.tsx",
-    "./item": "./src/components/ui/item.tsx",
-    "./kbd": "./src/components/ui/kbd.tsx",
-    "./label": "./src/components/ui/label.tsx",
-    "./menubar": "./src/components/ui/menubar.tsx",
-    "./navigation-menu": "./src/components/ui/navigation-menu.tsx",
-    "./pagination": "./src/components/ui/pagination.tsx",
-    "./popover": "./src/components/ui/popover.tsx",
-    "./progress": "./src/components/ui/progress.tsx",
-    "./radio-group": "./src/components/ui/radio-group.tsx",
-    "./resizable": "./src/components/ui/resizable.tsx",
-    "./scroll-area": "./src/components/ui/scroll-area.tsx",
-    "./select": "./src/components/ui/select.tsx",
-    "./separator": "./src/components/ui/separator.tsx",
-    "./sheet": "./src/components/ui/sheet.tsx",
-    "./sidebar": "./src/components/ui/sidebar.tsx",
-    "./skeleton": "./src/components/ui/skeleton.tsx",
-    "./slider": "./src/components/ui/slider.tsx",
-    "./sonner": "./src/components/ui/sonner.tsx",
-    "./spinner": "./src/components/ui/spinner.tsx",
-    "./switch": "./src/components/ui/switch.tsx",
-    "./table": "./src/components/ui/table.tsx",
-    "./tabs": "./src/components/ui/tabs.tsx",
-    "./textarea": "./src/components/ui/textarea.tsx",
-    "./toggle": "./src/components/ui/toggle.tsx",
-    "./toggle-group": "./src/components/ui/toggle-group.tsx",
-    "./tooltip": "./src/components/ui/tooltip.tsx",
-    "./utils": "./src/lib/utils.ts",
-    "./theme.css": "./src/styles/theme.css"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./theme.css": "./dist/styles/theme.css",
+    "./utils": "./src/lib/utils.ts"
   },
   "scripts": {
-    "clean": "rm -rf node_modules",
+    "build": "tsdown",
+    "clean": "rm -rf node_modules dist",
+    "dev": "tsdown --watch './src/**/*'",
     "lint": "eslint . --max-warnings 0 --cache --cache-location node_modules/.cache/eslint/.eslintcache",
     "lint:fix": "eslint . --fix --max-warnings 0 --cache --cache-location node_modules/.cache/eslint/.eslintcache",
     "typecheck": "tsc --noEmit"
@@ -92,6 +44,7 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@bosh-code/tsdown-plugin-tailwindcss": "^1.0.1",
     "@oakoss/eslint-config": "workspace:^",
     "@oakoss/typescript-config": "workspace:^",
     "@types/node": "^25.0.9",
@@ -99,6 +52,8 @@
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-react-aria-components": "^2.0.1",
+    "tsdown": "0.20.0-beta.4",
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
