--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
     "GOOGLE_CLIENT_ID",
     "GOOGLE_CLIENT_SECRET",
     "NODE_ENV",
+    "PROD",
     "SESSION_SECRET",
     "SKIP_ENV_VALIDATION",
     "VITE_APP_URL"
