--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "@oakoss/typescript-config/react.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    {
+      "path": "./tsconfig.lint.json"
+    }
+  ]
 }
