--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -20,5 +20,7 @@
   },
   "menuColor": "default",
   "menuAccent": "subtle",
-  "registries": {}
+  "registries": {
+    "@intentui": "https://intentui.com/r/{name}"
+  }
 }
