--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,7 +27,6 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@remixicon/react": "^4.8.0",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
@@ -37,9 +36,9 @@
     "react-day-picker": "^9.13.0",
     "react-resizable-panels": "^4.4.1",
     "recharts": "2.15.4",
-    "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2"
   },
@@ -51,6 +50,7 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
+    "shadcn": "^3.7.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-react-aria-components": "^2.0.1",
     "tsdown": "0.20.0-beta.4",
