fix(ui): add Tailwind Vite plugin for Storybook styles
- Add @tailwindcss/vite to process theme.css in Storybook
- Add viteFinal config to inject Tailwind plugin
- Add vitest addon and configuration for Storybook testing

--- a/packages/ui/tsconfig.lint.json
+++ b/packages/ui/tsconfig.lint.json
@@ -6,5 +6,10 @@
     "outDir": "node_modules/.cache/typescript/lint",
     "tsBuildInfoFile": "node_modules/.cache/typescript/lint/.tsbuildinfo"
   },
-  "include": [".storybook", "tsdown.config.ts"]
+  "include": [
+    ".storybook",
+    "tsdown.config.ts",
+    "vitest.config.ts",
+    "vitest.shims.d.ts"
+  ]
 }
