--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,18 +50,24 @@
     "@oakoss/typescript-config": "workspace:^",
     "@storybook/addon-a11y": "^10.2.0",
     "@storybook/addon-docs": "^10.2.0",
+    "@storybook/addon-vitest": "^10.2.0",
     "@storybook/react-vite": "^10.2.0",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "@vitest/browser-playwright": "^4.0.17",
+    "@vitest/coverage-v8": "^4.0.17",
     "eslint": "^9.39.2",
     "eslint-plugin-storybook": "^10.2.0",
+    "playwright": "^1.57.0",
     "shadcn": "^3.7.0",
     "storybook": "^10.2.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-react-aria-components": "^2.0.1",
     "tsdown": "0.20.0-beta.4",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.17"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
