chore: configure vitest coverage and turborepo test tasks
- Add coverage configuration with v8 provider, reporters (text, html, lcov)
- Set 50% coverage thresholds for both UI and web packages
- Add test:coverage and test:watch scripts to root package.json
- Configure turbo.json with test tasks and ui: stream for browser tests
- Use --continue flag to run all test tasks to completion
- Add @vitest/coverage-istanbul to UI package for browser mode support

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lint:ws": "sherif",
     "start": "turbo run start",
     "storybook": "turbo run storybook --filter=@oakoss/ui",
-    "test": "turbo run test",
+    "test": "turbo run test --continue",
+    "test:coverage": "turbo run test:coverage --continue",
+    "test:watch": "turbo run test:watch",
     "typecheck": "turbo run typecheck"
   },
   "config": {
