--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,6 +8,7 @@
     ":semanticCommitTypeAll(chore)"
   ],
   "labels": ["dependencies"],
+  "platformAutomerge": true,
   "rangeStrategy": "bump",
   "prHourlyLimit": 4,
   "prConcurrentLimit": 10,
