--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,18 @@ jobs:
       - name: Run tests
         uses: ./.github/actions/test
 
-      - name: Upload coverage to Codecov
+      - name: Upload UI coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
           directory: ./packages/ui/coverage
           flags: ui
+          fail_ci_if_error: false
+
+      - name: Upload Web coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          directory: ./apps/web/coverage
+          flags: web
           fail_ci_if_error: false
 
   build:
