feat(ci): enable TurboSnap for Chromatic
- Add --stats-json flag to build-storybook for Vite dependency tracking
- Add push trigger on main branch for proper git history analysis

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -2,6 +2,11 @@ name: Chromatic
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - 'packages/ui/**'
   pull_request:
     paths:
       - 'packages/ui/**'
