feat(ui): add Storybook component tests with Vitest integration
- Add Sidebar stories (Default, Collapsed, FloatingVariant)
- Add Skeleton stories (Default, Circle, Card)
- Configure SB_URL env var for CI debugging links
- Simplify vitest config to Storybook-only testing
- Update vitest and related dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
     name: Test
     needs: static-checks
     runs-on: ubuntu-latest
+    env:
+      SB_URL: https://${{ github.head_ref || github.ref_name }}--${{ vars.CHROMATIC_APP_ID }}.chromatic.com
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
