feat(ui): add stories for Feedback & Status components (#30)

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,4 +1,5 @@
 # lefthook.yml
+no_tty: true # Prevents terminal escape sequence issues with beads hooks
 output:
   - failure # Only show failed steps
   - execution_out # Show command output for failures
@@ -6,6 +7,10 @@ output:
 pre-commit:
   parallel: true
   commands:
+    bd-flush:
+      run: TERM=dumb bd hooks run pre-commit --quiet
+      skip:
+        - run: '[ ! -d .beads ]'
     typecheck:
       glob: '*.{ts,tsx}'
       run: pnpm typecheck
@@ -21,6 +26,27 @@ pre-commit:
       glob: '*.{ts,tsx,js,jsx,cjs,mjs,json,md,mdx,yml,yaml}'
       run: pnpm prettier -uwl {staged_files}
       stage_fixed: true # Auto-stage Prettier fixes!
+
+post-merge:
+  commands:
+    bd-import:
+      run: TERM=dumb bd hooks run post-merge --quiet
+      skip:
+        - run: '[ ! -d .beads ]'
+
+post-checkout:
+  commands:
+    bd-import:
+      run: TERM=dumb bd hooks run post-checkout {1} {2} {3} --quiet
+      skip:
+        - run: '[ ! -d .beads ]'
+
+pre-push:
+  commands:
+    bd-sync:
+      run: TERM=dumb bd hooks run pre-push --quiet
+      skip:
+        - run: '[ ! -d .beads ]'
 
 commit-msg:
   commands:
